styles fixes: position relative to cart in menu page, plus button fixes text-align center

--- a/src/styles/cart.scss
+++ b/src/styles/cart.scss
@@ -33,6 +33,7 @@
     padding: 20px;
     width: 200px;
     text-align: left;
+    position: relative;
     ul {
       list-style: none;
       margin: 0;
