--- a/src/styles/pizza.scss
+++ b/src/styles/pizza.scss
@@ -49,6 +49,7 @@
       margin: 5px;
       background-color: var(--white);
       color: var(--yellow);
+      text-align: center;
       &:hover {
         background-color: var(--yellow);
         color: white;
